samples/_failures_safe/1761289965_036323_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_65e1d351.c: In function ‘main’:
./samples/SAFE/__tmp_65e1d351.c:192:5: error: expected declaration or statement at end of input
  192 |     if (!fgets(input, sizeof(input), stdin)) {
      |     ^~
./samples/SAFE/__tmp_65e1d351.c:192:5: error: expected declaration or statement at end of input
